# cuda_matrix_multiplication

./: CMakeLists.txt  main.cu
